CLIENT/Stylesheet - FOOTER: Moved all footer content to 1 location, Fixed BUG where padding on mobile was chaotic by removing padding all together ( half of the page was the footer on my phone and now always perfect fit on bottom)

--- a/client/src/assets/css/styles.css
+++ b/client/src/assets/css/styles.css
@@ -612,26 +612,22 @@ table {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* justify-content: space-evenly; */
   align-items: center;
   background-color: var(--theme-l-gp_0);
   color: var(--C10);
   opacity: 1;
   z-index: 1000;
-  /* font-size: .8rem; */
 }
 
 .progressBarBackArrow img{
   margin-right: 1rem;
   width: 30px;
-  /* filter: drop-shadow(0 2px 1px rgb(0 0 0 / 0.4)); */
   transition: ease-in-out 200ms;
 }
 
 .progressBarBackArrow img:hover {
   filter: drop-shadow(0 2px 1px rgb(0 0 0 / 0.4)) brightness(105%);
   cursor: pointer;
-  /* width: 40px; */
 }
 
 .progressBarBackArrow img:active {
@@ -659,6 +655,10 @@ progress.progressBarStep{
   font-size: 1.5rem;
 }
 
+/*------------------------------------------------------------------------------
+  APPOINTMENT CONFIRMATION AND VERIFICATION PAGE
+*/
+
 .appointmentConfirmation {
   background-color: var(--darker-pink);
   color: white;
@@ -672,28 +672,6 @@ progress.progressBarStep{
   font-weight: bold;
   font-size: 18px;
 }
-
-/* #progressBar{
-  display: inline-block;
-  text-align: center;
-  align-items: center;
-  padding: 0 3rem;
-  width: 30%;
-}
-
-#progressBar label{
-  height: 2rem;
-}
-
-progress[value]{
-  height: 2rem;
-  vertical-align: center;  
-} */
-
-
-
-
-
 
 /*----------------------------------------------------------------------------*/
 /* CLIENT CONTACT FORM */
@@ -849,10 +827,6 @@ header img.brandLogo{
   width: 70px;
 }
 
-footer img.brandLogo{
-  width: 40px;
-}
-
 .brandLogo:hover {
   /* 
       Start the shake animation 
@@ -925,7 +899,7 @@ footer {
   position: fixed;
   bottom: 0;
   width:100%;
-  padding: 10px; 
+  padding: 0px; 
   margin: auto;
   display: flex;
   justify-content: space-around; 
@@ -936,6 +910,17 @@ footer {
   flex-direction: row;
   margin: auto;
   align-items: center;
+}
+
+
+footer img.brandLogo{
+  width: 40px;
+}
+
+footer p{
+  font-size: .8rem;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 
